# OpenPower

./: .gitignore  CONTRIBUTING.md  README.md  imgui.ini  main.py  pyproject.toml  requirements.txt  scratch.csv  scratch_trade.csv
.agents/rules/: base-module.md  client.md  (+7 more)
.archive/: economy_gen.py
.specify/: feature.json
docs/: ARCHITECTURE.md  DIPLOMACY.md  MODDING.md
scratch/: check_economy.py
src/: cli.py  libs
tests/: test_ai_framework.py  test_ai_integration.py  test_ai_policies.py  test_ai_system.py  test_combat_system.py  test_command_pipeline.py  test_country_more_info.py  test_data_loader_mod_layering.py  test_diplomacy_system.py  test_diplomatic_aid.py  test_display_settings_regressions.py  test_economy_smoke.py  test_energy_crisis_mod.py  test_engagement_mvp.py  test_engine_determinism.py  test_feature_variations.py  test_game_config.py  test_game_settings_display.py  test_game_state_ipc.py  test_geo_names.py  test_headless_server.py  test_headless_simulation.py  test_layer_boundaries.py  test_military_presenter.py  test_mod_api.py  test_mod_manager.py  test_modding_cli.py  test_movement_access.py  test_political_map_mode.py  test_research_program_system.py  test_runtime_architecture.py  test_save_loader_type_hints.py  test_schema_mod_migrations.py  test_simulation_tooling.py  test_snapshot_protocol.py  test_system_state_contracts.py  test_time_system.py  test_treaty_rules.py  test_treaty_specification.py  test_treaty_trade_policy.py  (+1 more)
tools/: mapgen.py
utils/: data_distributor_tool.py  mapgen.py  schema_gen.py  simulate.py  validate_economy.py
(+732 files in other folders)
